--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,39 +1,52 @@
 // Material Theme Colors
-$mdc-theme-primary: #424242;
-$mdc-theme-secondary: #007bff;
-$mdc-theme-background: #ffccbc;
-$mdc-typography-font-family: 'Open Sans', sans-serif;
+$mdc-theme-primary: #ff0000;
+$mdc-theme-secondary: #36424e;
+$mdc-theme-background: #fbd209;
+$mdc-typography-font-family: 'Zilla Slab', serif;
 
-@import "@material/typography/mdc-typography";
+@import "~@material/typography/mdc-typography";
+@import "~@material/layout-grid/mdc-layout-grid";
 
-html {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
+html,
 body {
   margin: 0;
-  flex: 0 1 auto;
-  align-self: auto;
   width: 100%;
-  max-width: 900px;
   height: 100%;
-  max-height: 600px;
   background: $mdc-theme-background;
+  color: $mdc-theme-secondary;
+}
+
+.content-div {
+  width: 100%;
+  height: 100%;
+}
+
+.address-text {
+  @include mdc-typography(headline4);
+  font-weight: bolder;
+  font-size: 3.081em;
+  line-height: 1.4em;
+  text-align: center;
+  margin: 0;
 }
 
 .title-text {
-  @include mdc-typography(headline1);
+  @include mdc-typography(headline2);
+  font-weight: bold;
+  font-size: 5.437em;
   text-align: center;
+  margin: 0;
 }
 
 .subtitle-text {
-  @include mdc-typography(headline2);
+  @include mdc-typography(headline1);
+  font-size: 8.7em;
+  line-height: 0.7em;
+  font-weight: bolder;
   text-align: center;
+  margin: 0;
+}
+
+.side-images {
+  fill: $mdc-theme-secondary;
 }
